<package>
  <name>neo_sick_s300</name>
  <version>0.6.2</version>
  <description>This package published a laser scan message out of a Sick S300 laser scanner.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_sick_s300</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="ros@neobotix.de">Jan-Niklas Nieland</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <export>

  </export>
</package>
