<package>
  <name>neo_sick_s300</name>
  <version>1.0.0</version>
  <description>This package publishes a laser scan message out of a Sick S300 laser scanner.</description>

  <license>BSD</license>

  <url type="website">https://github.com/neobotix/neo_sick_s300</url>

  <maintainer email="ros@neobotix.de">Max Wittal</maintainer>
  <author email="wittal@neobotix.de">Max Wittal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
